url değişiklik yaptım

--- a/style.css
+++ b/style.css
@@ -54,7 +54,8 @@
 
 /* 2.Part My Skills,Table (2.Foto) div2 */
 #div2 {
-   background-image: url("file:///C:/Users/y/Downloads/nordwood-themes-KcsKWw77Ovw-unsplash.jpg");
+   background-image: url("https://unsplash.com/photos/KcsKWw77Ovw");
+   /* background-image: url("file:///C:/Users/y/Downloads/nordwood-themes-KcsKWw77Ovw-unsplash.jpg"); */
    background-size: cover;
    background-repeat: no-repeat;
    height: 100vh;
